apps/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
spec:
  selector:
    app: matrix
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
