apps/matrix/route.yaml
# apps/matrix/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: matrix
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: matrix-https     
  hostnames:
    - "matrix.hoareau-marion.eu"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https"
    - backendRefs:
        - name: matrix
          port: 8096
